# simdize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  aligning_loop_bm.cpp  compute_bm.cpp  helper_bm.hpp  loop_bm.cpp  reduction_bm.cpp  reflection_bm.cpp  universal_bm.cpp
doc/: doxyfile  mainpage.md
include/: element_access.hpp  index.hpp  load_store.hpp  member_overload.hpp  simd_access.hpp  simd_loop.hpp  value_access.hpp
include/simd_access/: base.hpp  cast.hpp  element_access.hpp  index.hpp  load_store.hpp  location.hpp  member_overload.hpp  operator_overload.hpp  reflection.hpp  simd_access.hpp  simd_loop.hpp  universal_simd.hpp  value_access.hpp  vector.hpp
single-include/: simd_access_sh.hpp
src/: simdize.cpp
test/: CMakeLists.txt  aos_test.cpp  cast_test.cpp  elementwise_test.cpp  index_test.cpp  loop_test.cpp  macro_test.cpp  potential_operator_overload.cpp  reflections_test.cpp  simdize.cpp  universal_simd_test.cpp  vector_test.cpp
